<resources>
    <string name="app_name">Void Recorder</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="recorder_fragment_label">Recorder Fragment</string>
    <string name="recording_fragment_label">Recording Fragment</string>
    <string name="settings_fragment_label">Settings Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


    <!--Settings-->
    <string name="output_format_pref">outputFormatList</string>
    <string name="output_quality_pref">outputQualityList</string>
    <string name="max_space_pref">maxSpace</string>
    <string name="max_duration">maxDuration</string>
    <string name="automatic_deletion_pref">automaticDeletion</string>
    <string name="space_limit_dialog_pref">spaceLimitDialog</string>



    <string name="service_recording">The service is recording in the background.</string>
    <string name="dummy_duration">00:00</string>
    <string name="dummy_size">0 Kb</string>
    <string name="dummy_timer">00:00:00</string>

    <string name="mfoura_ext">m4a</string>
    <string name="mpthree_ext">mp3</string>
    <string name="threegp_ext">3gp</string>


    <string name="notification_title">Storage space running out</string>
    <string name="notification_content">This may slow down some apps and system functions</string>

    <string name="recordings_title_timestamp_format">yyyy_MM_dd_kk_mm_ss</string>

    <!--Dialogs-->
    <string name="delete_dialog_title">Delete Confirmation</string>
    <string name="delete_dialog_content">Are you sure you want to delete</string>

    <string name="freeup_dialog_title">Max Limit Reached</string>
    <string name="freeup_dialog_content">Do you want to free up space by deleting the oldest non-saved recordings?\n\nNote: You can disable this alert from settings.</string>
    <string name="freeup_dialog_positive_btn">Delete</string>
    <string name="freeup_dialog_negative_btn">Later</string>

    <string name="space_freed_dialog_title">Space Freed</string>
    <string name="space_freed_dialog_content">Oldest Non-Saved Recordings Were Deleted To Free Up Space!</string>

    <string name="confirmation_dialog_title">Confirmation Dialog</string>
    <string name="confirmation_dialog_content">Enter a new name for the audio file.</string>

</resources>